backend/back-service.yml
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  selector:
    app: back
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP




















# apiVersion: v1
# kind: Service
# metadata:
#   creationTimestamp: null
#   labels:
#     app: backend
#   name: backend-service
# spec:
#   ports:
#   - port: 8000
#     targetPort: 8000
#   selector:
#     app: backend
# status:
#   loadBalancer: {}
